[gd_scene load_steps=2 format=2]

[ext_resource path="res://StartScreen.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -36.5
margin_right = 350.0
margin_bottom = 163.0

[node name="HOST" type="Button" parent="VBoxContainer"]
margin_right = 700.0
margin_bottom = 20.0
text = "HOST"

[node name="JOIN" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 700.0
margin_bottom = 44.0
text = "JOIN"

[node name="QUIT" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 700.0
margin_bottom = 68.0
text = "QUIT"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 700.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 20 )
hint_tooltip = "Enter name"

[connection signal="pressed" from="VBoxContainer/HOST" to="." method="_on_HOST_pressed"]
[connection signal="pressed" from="VBoxContainer/JOIN" to="." method="_on_JOIN_pressed"]
[connection signal="pressed" from="VBoxContainer/QUIT" to="." method="_on_QUIT_pressed"]
